fix: product variation alignment [#3331]

--- a/assets/scss/components/compat/woocommerce/_product.scss
+++ b/assets/scss/components/compat/woocommerce/_product.scss
@@ -155,9 +155,11 @@
 			}
 		}
 
-		tr:not(:last-child) {
+		tr{
+		  display: block;
+		  &:not(:last-child) {
 			margin-bottom: $spacing-xs;
-			display: block;
+		  }
 		}
 	}
 
